[package]
name = "rust-number-spirals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
primal = "0.3.2"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0"
svg = "0.13.1"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "SvgElement",
  "Node",
  "Window",
]

[lib]
crate-type = ["cdylib"]
